Fixed a bug with editing traits in non-English languages Fixed a bug that automatically disabled file sharing Fixed a bug with audio format interaction to NA Fixed an interaction between language changes and main screen

--- a/app/src/main/res/layout/trait_date.xml
+++ b/app/src/main/res/layout/trait_date.xml
@@ -69,8 +69,7 @@
                     android:gravity="center|center_vertical"
                     android:layout_margin="10dp"
                     android:minWidth="@dimen/button_default_width"
-                    android:text="@string/minusday"
-                    android:background="@drawable/rounded_button"
+                    android:text="-1"
                     android:textColor="#000000"
                     android:textSize="@dimen/text_size_xxlarge"
                     android:textStyle="bold" />
@@ -94,8 +93,7 @@
                     android:gravity="center"
                     android:minWidth="@dimen/button_default_width"
                     android:layout_margin="10dp"
-                    android:text="@string/plusday"
-                    android:background="@drawable/rounded_button"
+                    android:text="+1"
                     android:textColor="#000000"
                     android:textSize="@dimen/text_size_xxlarge"
                     android:textStyle="bold" />
