--- a/app/src/main/res/layout/trait_diseaserating.xml
+++ b/app/src/main/res/layout/trait_diseaserating.xml
@@ -31,8 +31,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="0"
@@ -46,8 +44,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="5"
@@ -61,8 +57,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="10"
@@ -76,8 +70,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="15"
@@ -91,8 +83,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="20"
@@ -106,8 +96,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="25"
@@ -121,8 +109,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="30"
@@ -136,8 +122,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="35"
@@ -151,8 +135,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="40"
@@ -166,8 +148,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="45"
@@ -181,8 +161,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="50"
@@ -196,8 +174,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="55"
@@ -212,7 +188,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="60"
@@ -226,8 +201,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="65"
@@ -241,8 +214,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="70"
@@ -256,8 +227,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="75"
@@ -271,8 +240,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="80"
@@ -286,8 +253,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="85"
@@ -301,8 +266,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="90"
@@ -316,8 +279,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="95"
@@ -331,8 +292,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="60dp"
                     android:text="100"
@@ -355,8 +314,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="85dp"
                     android:text="R"
@@ -369,8 +326,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="85dp"
                     android:text="M"
@@ -383,8 +338,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_margin="2dp"
-                    android:background="@drawable/rounded_button"
                     android:gravity="center"
                     android:minWidth="85dp"
                     android:text="S"
@@ -406,9 +359,10 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginTop="2dp"
                     android:background="@drawable/round_button"
                     android:gravity="center"
                     android:minWidth="60dp"
@@ -422,9 +376,10 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginTop="2dp"
                     android:background="@drawable/round_button"
                     android:gravity="center"
                     android:padding="10dp"
