--- a/app/src/main/res/layout-sw600dp/trait_date.xml
+++ b/app/src/main/res/layout-sw600dp/trait_date.xml
@@ -67,10 +67,9 @@
                     android:layout_width="130dp"
                     android:layout_height="70dp"
                     android:gravity="center|center_vertical"
-                    android:text="@string/minusday"
+                    android:text="-1"
                     android:textColor="#000000"
                     android:layout_margin="10dp"
-                    android:background="@drawable/rounded_button"
                     android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
 
@@ -101,8 +100,7 @@
                     android:gravity="center"
                     android:layout_margin="10dp"
                     android:minWidth="130dp"
-                    android:text="@string/plusday"
-                    android:background="@drawable/rounded_button"
+                    android:text="+1"
                     android:textColor="#000000"
                     android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
