--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
+    <group
+        android:id="@+id/navDrawer_main"
+        android:checkableBehavior="single">
         <item
             android:id="@+id/nav_settings"
             android:icon="@drawable/ic_settings"
@@ -15,26 +17,24 @@
             android:id="@+id/nav_traits"
             android:icon="@drawable/ic_list"
             android:title="@string/traits" />
+    </group>
+    <group
+        android:id="@+id/navDrawer_secondary"
+        android:title="@string/profile">
+        <item
+            android:id="@+id/nav_person"
+            android:icon="@drawable/ic_person"
+            android:title="@string/person" />
+
+        <item
+            android:id="@+id/nav_location"
+            android:icon="@drawable/ic_my_location"
+            android:title="@string/location" />
+
+        <item
+            android:id="@+id/nav_language"
+            android:icon="@drawable/ic_translate"
+            android:title="@string/language" />
 
     </group>
-
-    <item android:title="@string/profile">
-        <menu>
-            <item
-                android:id="@+id/nav_person"
-                android:icon="@drawable/ic_person"
-                android:title="@string/person" />
-
-            <item
-                android:id="@+id/nav_location"
-                android:icon="@drawable/ic_my_location"
-                android:title="@string/location" />
-
-            <item
-                android:id="@+id/nav_language"
-                android:icon="@drawable/ic_translate"
-                android:title="@string/language" />
-
-        </menu>
-    </item>
 </menu>
