--- a/app/src/main/res/layout-sw600dp/main.xml
+++ b/app/src/main/res/layout-sw600dp/main.xml
@@ -8,11 +8,11 @@
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/layout_main"
         android:layout_width="match_parent"
-        android:background="@android:color/white"
         android:layout_height="match_parent"
+        android:background="@android:color/white"
         android:fitsSystemWindows="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -26,6 +26,51 @@
                 android:minHeight="?attr/actionBarSize"
                 app:popupTheme="@style/AppToolbar"
                 app:theme="@style/AppToolbar" />
+
+            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/toolbarBottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                android:background="@color/main_primaryDark"
+                app:popupTheme="@style/AppToolbar"
+                app:theme="@style/AppToolbar">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:weightSum="1">
+
+                    <ImageButton
+                        android:id="@+id/missingValue"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="0.4"
+                        android:background="@color/main_primaryDark"
+                        android:gravity="center"
+                        android:src="@drawable/ic_missing"
+                        android:textColor="#FFFFFF" />
+
+                    <ImageButton
+                        android:id="@+id/deleteValue"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="0.4"
+                        android:background="@color/main_primaryDark"
+                        android:gravity="center"
+                        android:src="@drawable/ic_delete_forever"
+                        android:textColor="#FFFFFF" />
+
+                </LinearLayout>
+            </android.support.v7.widget.Toolbar>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -331,50 +376,16 @@
                         android:orientation="vertical">
 
                         <EditText
-                            android:id="@+id/tNum"
+                            android:id="@+id/etCurVal"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
+                            android:enabled="false"
                             android:layout_gravity="center_horizontal"
                             android:gravity="center"
                             android:inputType="textNoSuggestions"
+                            android:maxLines="1"
                             android:paddingLeft="10dp"
                             android:paddingRight="10dp"
-                            android:singleLine="true"
-                            android:text=""
-                            android:textColor="#000000"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold"
-                            android:visibility="gone" />
-
-                        <EditText
-                            android:id="@+id/eNum"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:gravity="center"
-                            android:inputType="phone"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:selectAllOnFocus="true"
-                            android:singleLine="true"
-                            android:text=""
-                            android:textColor="#000000"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold"
-                            android:visibility="gone" />
-
-                        <EditText
-                            android:id="@+id/pNum"
-                            android:layout_width="fill_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_horizontal"
-                            android:enabled="false"
-                            android:gravity="center"
-                            android:inputType="text"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:singleLine="true"
-                            android:state_enabled="false"
                             android:text=""
                             android:textColor="#000000"
                             android:textSize="@dimen/text_size_xlarge"
@@ -458,18 +469,7 @@
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
-
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/missingData"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_missing"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp" />
+        </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
