--- a/app/src/main/res/layout-sw600dp/trait_date.xml
+++ b/app/src/main/res/layout-sw600dp/trait_date.xml
@@ -66,10 +66,10 @@
                     android:id="@+id/minusDateBtn"
                     android:layout_width="130dp"
                     android:layout_height="70dp"
+                    android:layout_margin="10dp"
                     android:gravity="center|center_vertical"
                     android:text="-1"
                     android:textColor="#000000"
-                    android:layout_margin="10dp"
                     android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
 
@@ -81,13 +81,13 @@
                     android:id="@+id/enterBtn"
                     android:layout_width="75dp"
                     android:layout_height="75dp"
-                    android:layout_margin="10dp"
-                    android:scaleType="fitXY"
-                    android:background="@drawable/round_button"
-                    android:padding="10dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/ic_save"
-                    android:gravity="center" />
+                    android:layout_margin="10dp"
+                    android:background="@drawable/round_button"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/ic_save" />
 
                 <View
                     android:layout_width="10dp"
@@ -97,34 +97,13 @@
                     android:id="@+id/addDateBtn"
                     android:layout_width="130dp"
                     android:layout_height="70dp"
-                    android:gravity="center"
                     android:layout_margin="10dp"
+                    android:gravity="center"
                     android:minWidth="130dp"
                     android:text="+1"
                     android:textColor="#000000"
                     android:textSize="@dimen/text_size_xlarge"
                     android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:paddingTop="10dp">
-
-                <ImageButton
-                    android:id="@+id/clearDateBtn"
-                    android:layout_width="75dp"
-                    android:layout_margin="10dp"
-                    android:layout_height="75dp"
-                    android:scaleType="fitXY"
-                    android:background="@drawable/round_button"
-                    android:padding="10dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_delete_forever"
-                    android:gravity="center" />
 
             </LinearLayout>
         </LinearLayout>
