--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -12,9 +12,9 @@
         android:background="@android:color/white"
         android:fitsSystemWindows="true">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
@@ -27,9 +27,57 @@
                 app:popupTheme="@style/AppToolbar"
                 app:theme="@style/AppToolbar" />
 
+            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/toolbarBottom"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                android:background="@color/main_primaryDark"
+                app:popupTheme="@style/AppToolbar"
+                app:theme="@style/AppToolbar">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:weightSum="1">
+
+                    <ImageButton
+                        android:id="@+id/missingValue"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="0.4"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:gravity="center"
+                        android:src="@drawable/ic_missing"
+                        android:textColor="#FFFFFF" />
+
+                    <ImageButton
+                        android:id="@+id/deleteValue"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_weight="0.4"
+                        android:background="?attr/selectableItemBackgroundBorderless"
+                        android:gravity="center"
+                        android:src="@drawable/ic_delete_forever"
+                        android:textColor="#FFFFFF" />
+
+                </LinearLayout>
+
+            </android.support.v7.widget.Toolbar>
+
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                android:layout_above="@id/toolbarBottom"
+                android:layout_below="@id/toolbar"
                 android:orientation="vertical">
 
                 <TextView
@@ -326,45 +374,15 @@
                     android:orientation="vertical">
 
                     <EditText
-                        android:id="@+id/tNum"
+                        android:id="@+id/etCurVal"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
                         android:gravity="center"
                         android:inputType="textNoSuggestions"
-                        android:singleLine="true"
+                        android:maxLines="1"
                         android:text=""
-                        android:textColor="#000000"
-                        android:textSize="@dimen/text_size_xlarge"
-                        android:textStyle="bold"
-                        android:visibility="gone" />
-
-                    <EditText
-                        android:id="@+id/eNum"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:gravity="center"
-                        android:inputType="phone"
-                        android:selectAllOnFocus="true"
-                        android:singleLine="true"
-                        android:text=""
-                        android:textColor="#000000"
-                        android:textSize="@dimen/text_size_xlarge"
-                        android:textStyle="bold"
-                        android:visibility="gone" />
-
-                    <EditText
-                        android:id="@+id/pNum"
-                        android:layout_width="fill_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
                         android:enabled="false"
-                        android:gravity="center"
-                        android:inputType="text"
-                        android:singleLine="true"
-                        android:state_enabled="false"
-                        android:text=""
                         android:textColor="#000000"
                         android:textSize="@dimen/text_size_xlarge"
                         android:textStyle="bold"
@@ -444,21 +462,12 @@
 
                         </LinearLayout>
                     </ScrollView>
-
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/missingData"
-            android:layout_width="56dp"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="10dp"
-            android:src="@drawable/ic_missing"
-            app:borderWidth="0dp"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp" />
+
+        </RelativeLayout>
+
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
