--- a/app/src/main/res/layout/trait_counter.xml
+++ b/app/src/main/res/layout/trait_counter.xml
@@ -39,49 +39,27 @@
             android:orientation="horizontal"
             android:paddingTop="10dp">
 
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <Button
-                    android:id="@+id/minusBtn"
-                    android:layout_width="65dp"
-                    android:background="@drawable/round_button"
-                    android:layout_height="65dp"
-                    android:gravity="center|center_vertical"
-                    android:text="@string/minusday"
-                    android:minWidth="@dimen/button_default_width"
-                    android:layout_marginBottom="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="#000000"
-                    android:textSize="@dimen/text_size_large"
-                    android:textStyle="bold" />
-
-                <ImageButton
-                    android:id="@+id/clearCounterBtn"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
-                    android:background="@drawable/round_button"
-                    android:scaleType="fitXY"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="5dp"
-                    android:padding="10dp"
-                    android:layout_gravity="center"
-                    android:src="@drawable/ic_delete_forever"
-                    android:gravity="center" />
-            </LinearLayout>
+            <Button
+                android:id="@+id/minusBtn"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/round_button"
+                android:gravity="center|center_vertical"
+                android:minWidth="@dimen/button_default_width"
+                android:text="@string/minusday"
+                android:textColor="#000000"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/addBtn"
                 android:layout_width="145dp"
                 android:layout_height="145dp"
+                android:layout_margin="5dp"
+                android:background="@drawable/round_button"
                 android:gravity="center"
                 android:text="@string/plusday"
-
                 android:textColor="#000000"
                 android:textSize="@dimen/text_size_xxlarge"
                 android:textStyle="bold" />
@@ -89,4 +67,3 @@
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
-
