--- a/app/src/main/res/layout/trait_photo.xml
+++ b/app/src/main/res/layout/trait_photo.xml
@@ -28,36 +28,17 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
+        <ImageButton
+            android:id="@+id/capture"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/round_button"
+            android:gravity="center"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_camera" />
 
-            <ImageButton
-                android:id="@+id/clearPhoto"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:scaleType="fitXY"
-                android:layout_margin="10dp"
-                android:padding="10dp"
-                android:background="@drawable/round_button"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_delete_forever"
-                android:gravity="center" />
-
-            <ImageButton
-                android:id="@+id/capture"
-                android:layout_width="65dp"
-                android:layout_height="65dp"
-                android:layout_margin="10dp"
-                android:background="@drawable/round_button"
-                android:scaleType="fitXY"
-                android:padding="10dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_camera"
-                android:gravity="center" />
-
-        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
