--- a/app/src/main/res/layout/trait_percent.xml
+++ b/app/src/main/res/layout/trait_percent.xml
@@ -11,12 +11,11 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="35dp"
-        android:maxHeight="18dip"
-        android:minHeight="18dip"
-        android:paddingBottom="10px"
-        android:paddingLeft="30px"
-        android:paddingRight="30px"
-        android:paddingTop="10px"
+        android:maxHeight="18dp"
+        android:minHeight="18dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:progressDrawable="@drawable/custom_seek_bar"
         android:thumb="@drawable/custom_seek_bar_thumb"
         android:thumbOffset="0dp" />
