--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
             <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                 android:id="@+id/toolbarBottom"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="45dp"
                 android:layout_alignParentBottom="true"
                 android:layout_gravity="bottom"
                 android:background="@color/main_primaryDark"
@@ -146,7 +146,7 @@
 
                         <Spinner
                             android:id="@+id/drop3prefix"
-                            android:layout_width="wrap_content"
+                            android:layout_width="100dp"
                             android:layout_height="wrap_content"
                             android:text="@string/drop3"
                             android:textColor="@color/s_text"
@@ -465,4 +465,5 @@
         android:background="@android:color/white"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/nav_drawer_view" />
+
 </android.support.v4.widget.DrawerLayout>
