--- a/app/src/main/res/layout/trait_multicat.xml
+++ b/app/src/main/res/layout/trait_multicat.xml
@@ -11,6 +11,5 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:numColumns="3"
-        android:paddingTop="5dp" />
+        android:numColumns="3" />
 </LinearLayout>
