--- a/app/src/main/res/layout/dialog_print.xml
+++ b/app/src/main/res/layout/dialog_print.xml
@@ -33,6 +33,17 @@
         android:orientation="horizontal">
 
         <Button
+            android:id="@+id/closeBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:text="@string/close"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Button
             android:id="@+id/printBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
