--- a/app/src/main/res/layout/dialog_print.xml
+++ b/app/src/main/res/layout/dialog_print.xml
@@ -13,17 +13,11 @@
     <ImageView
         android:id="@+id/labelPreview"
         android:layout_width="match_parent"
-        android:layout_height="153dp"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
         android:src="@drawable/label_example" />
 
-    <!--<TextView-->
-        <!--android:id="@+id/labelImgInstructions"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_weight="1" />-->
-
-
-        <LinearLayout
+    <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -33,28 +27,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="@string/labelsizetitle"
+                android:textColor="#000000"
+                android:textSize="@dimen/text_size_large"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/labelsize"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/drop1"
+                android:minWidth="200dp"
                 android:textColor="@color/s_text"
-                android:textSize="@dimen/text_size_xlarge"
+                android:textSize="@dimen/text_size_xxlarge"
                 android:textStyle="bold" />
-
-            <!--<TextView-->
-                <!--android:id="@+id/labelsizetext"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:ellipsize="end"-->
-                <!--android:maxLines="1"-->
-                <!--android:paddingLeft="10dp"-->
-                <!--android:scrollHorizontally="true"-->
-                <!--android:textColor="#000000"-->
-                <!--android:textSize="@dimen/text_size_xlarge"-->
-                <!--android:textStyle="bold" />-->
         </LinearLayout>
 
         <LinearLayout
@@ -63,32 +48,102 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/labelfieldtext"
+                android:id="@+id/textfieldtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView" />
-
-            <Spinner
-                android:id="@+id/labelfield"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/drop2"
-                android:textColor="@color/s_text"
-                android:textSize="@dimen/text_size_xlarge"
+                android:text="@string/textfieldtitle"
+                android:textColor="#000000"
+                android:textSize="@dimen/text_size_large"
                 android:textStyle="bold" />
 
-            <!--<TextView-->
-                <!--android:id="@+id/labelfieldtext"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:ellipsize="end"-->
-                <!--android:maxLines="1"-->
-                <!--android:paddingLeft="10dp"-->
-                <!--android:textColor="#000000"-->
-                <!--android:textSize="@dimen/text_size_xlarge"-->
-                <!--android:textStyle="bold" />-->
+            <Spinner
+                android:id="@+id/textfield"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minWidth="200dp"
+                android:textColor="@color/s_text"
+                android:textSize="@dimen/text_size_xxlarge"
+                android:textStyle="bold" />
         </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textfieldtitle2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/textfieldtitle2"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/textfield2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="200dp"
+            android:textColor="@color/s_text"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textfieldtitle3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/textfieldtitle3"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/textfield3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="200dp"
+            android:textColor="@color/s_text"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/textfieldtitle4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/textfieldtitle4"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/textfield4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="200dp"
+            android:textColor="@color/s_text"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="fill_parent"
@@ -96,65 +151,108 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/barcodefieldtitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/barcodefieldtitle"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
+        <Spinner
+            android:id="@+id/barcodefield"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="200dp"
+            android:textColor="@color/s_text"
+            android:textSize="@dimen/text_size_xxlarge"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingBottom="10dp">
+
+        <TextView
             android:id="@+id/labelcopiestext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="TextView" />
+            android:text="@string/labelcopiestitle"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
 
         <Spinner
             android:id="@+id/labelcopies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/drop3"
+            android:minWidth="200dp"
             android:textColor="@color/s_text"
-            android:textSize="@dimen/text_size_xlarge"
+            android:textSize="@dimen/text_size_xxlarge"
             android:textStyle="bold" />
 
-        <!--<TextView-->
-            <!--android:id="@+id/numCopies"-->
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="10dp"
+        android:paddingLeft="3dp"
+        android:paddingTop="10dp">
+
+        <TextView
+            android:id="@+id/printStatusTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="@string/printstatustitle"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_medium"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/printStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@+id/printStatusTitle"
+            android:text="@string/printstatus"
+            android:textColor="#595959"
+            android:textSize="@dimen/text_size_small"
+            android:textStyle="bold" />
+
+    </RelativeLayout>
+
+    <!--<LinearLayout-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:orientation="horizontal">-->
+
+        <!--<Button-->
+            <!--android:id="@+id/closeBtn"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
-            <!--android:ellipsize="end"-->
-            <!--android:maxLines="1"-->
-            <!--android:paddingLeft="10dp"-->
+            <!--android:layout_gravity="center"-->
+            <!--android:minWidth="@dimen/button_default_width"-->
+            <!--android:text="@string/close"-->
             <!--android:textColor="#000000"-->
-            <!--android:textSize="@dimen/text_size_xlarge"-->
+            <!--android:textSize="@dimen/text_size_large"-->
             <!--android:textStyle="bold" />-->
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/printStatus"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_weight="1" />
-
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/closeBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:minWidth="@dimen/button_default_width"
-            android:text="@string/close"
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/printBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:minWidth="@dimen/button_default_width"
-            android:text="@string/print"
-            android:textColor="#000000"
-            android:textSize="@dimen/text_size_large"
-            android:textStyle="bold" />
-    </LinearLayout>
+        <!--<Button-->
+            <!--android:id="@+id/printBtn"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_gravity="center_horizontal"-->
+            <!--android:minWidth="@dimen/button_default_width"-->
+            <!--android:text="@string/print"-->
+            <!--android:textColor="#000000"-->
+            <!--android:textSize="@dimen/text_size_large"-->
+            <!--android:textStyle="bold" />-->
+    <!--</LinearLayout>-->
 </LinearLayout>
