--- a/app/src/main/res/layout-sw600dp/listitem_trait.xml
+++ b/app/src/main/res/layout-sw600dp/listitem_trait.xml
@@ -15,7 +15,7 @@
         android:layout_height="40dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="#FFFFFF"
+        android:background="@android:color/transparent"
         android:padding="3dp"
         android:src="@drawable/ic_reorder" />
 
