--- a/app/src/main/res/layout/listitem_trait.xml
+++ b/app/src/main/res/layout/listitem_trait.xml
@@ -16,7 +16,7 @@
         android:layout_height="30dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:background="#FFFFFF"
+        android:background="@android:color/transparent"
         android:padding="3dp"
         android:paddingRight="5dp"
         android:src="@drawable/ic_reorder" />
