--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,14 @@
         <item name="buttonStyle">@style/ButtonStyle</item>
     </style>
 
+    <style name="AppThemeAction" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/main_primary</item>
+        <item name="colorPrimaryDark">@color/main_primaryDark</item>
+        <item name="colorAccent">@color/main_colorAccent</item>
+
+        <item name="buttonStyle">@style/ButtonStyle</item>
+    </style>
+
     <style name="NavigationDrawerTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="android:textSize">@dimen/text_size_medium</item>
     </style>
